fix spacing

--- a/THN/THNStyle.css
+++ b/THN/THNStyle.css
@@ -400,6 +400,7 @@ section
     flex-direction: column;
     justify-items: center;
     align-items: center;
+    margin-bottom: 2rem;
 }
 
 .telecomService-container > h1
